# NaoTrack

./: .gitignore  Makefile  NaoTrack.cbp  NaoTrack.depend  NaoTrack.layout  README.md  build_glog.sh  detectorSetting.sh  runAnalyser.sh  runDetector.sh  runFakeSource.sh  runGUI.sh  runServer.sh  runServer1.sh  runServer2.sh
src/Detection/: DatabaseGenerator.cpp  DetectionTest.cpp  Detector.cpp  FrameCapturer.cpp  FrameProcessor.cpp  SVMPredictor.cpp  SVMPredictor.h  SVMPredictorTest.cpp  SVM_model_display.ipynb  dataModel.ipynb  path  xData  xDataModel  xData_backup  yData  yDataModel  yData_backup
src/GUI/: .gitignore  Analyser.cpp  Analyser.hpp  CMakeLists.txt  Point.hpp  PointPublisher.hpp  PointReader.hpp  Test.cpp  config.xml  position-viewer.cc  viewer.glade
src/GUI/include/: vq2Concept.h  vq2GNGT.h
src/Position/Fakesource/: fakesource  fakesource.cpp  makefile
src/Position/PositionServer/: makefile  position-server
